--- a/header.html
+++ b/header.html
@@ -93,7 +93,7 @@
                 <div class="navs">
                     <ul>
                         <li>
-                            <a class="font_play" href="./">Hanwha E&C</a>
+                            <a class="font_play" href="./hanwha.html">Hanwha E&C</a>
                             <ul>
                                 <li><a href="#">경영이념</a></li>
                                 <li><a href="#">연혁</a></li>
@@ -105,7 +105,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="font_play" href="./">BUSINESS</a>
+                            <a class="font_play" href="./business.html">BUSINESS</a>
                             <ul>
                                 <li><a href="#">토목 사업</a></li>
                                 <li><a href="#">건축 사업</a></li>
@@ -115,7 +115,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="font_play" href="./">PR&nbsp;CENTER</a>
+                            <a class="font_play" href="./center.html">PR&nbsp;CENTER</a>
                             <ul>
                                 <li><a href="#">사회공원</a></li>
                                 <li><a href="#">공익사업</a></li>
@@ -127,7 +127,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="font_play" href="./">CAREERS</a>
+                            <a class="font_play" href="./careers.html">CAREERS</a>
                             <ul>
                                 <li><a href="#">인재개발</a></li>
                                 <li><a href="#">인사제도</a></li>
@@ -137,7 +137,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="font_play" href="./">PCUSTOMER</a>
+                            <a class="font_play" href="./customer.html">CUSTOMER</a>
                             <ul>
                                 <li><a href="#">고객문의</a></li>
                                 <li><a href="#">고객문의확인</a></li>
